@@ -770,7 +770,7 @@ When result-set mapping is used with a particular Mapper, SQLAlchemy has no acce
     # get results normally
     r = query.instances(statement.execute())
 
-It is often the case with large queries that some of the tables within the query need to be aliased in order to distinguish them from other occurences of the same table within the query.  A query that attempts to add eagerly loaded child items will often have this condition.  Therefore with a little more effort a decorator function can be used to produce translated rows (in the form of a dictionary which accepts Column instances), in the case that aliasing is used for the relationship tables.
+It is often the case with large queries that some of the tables within the query need to be aliased in order to distinguish them from other occurences of the same table within the query.  A query that attempts to add eagerly loaded child items will often have this condition.  The `contains_eager()` function takes a keyword argument `alias` which can either be the string name of an alias, or an actual `Alias` construct used in constructing the query, which will target the eager loading towards the columns of that alias (new in version 0.3.5):
 
     {python}
     # use an alias of the addresses table
@@ -779,17 +779,8 @@ It is often the case with large queries that some of the tables within the query
     # define a query on USERS with an outer join to adalias
     statement = users_table.outerjoin(adalias).select(use_labels=True)
 
-    # define row-translation function.  this should return 
-    # a dictionary-like object that will receive Column instances from the normally expected
-    # table (i.e. addreses_table), and produce results from the actual result set
-    def adtranslator(row):
-        d = {}
-        for c in addresses_table.columns:
-            d[c] = row[adalias.corresponding_column(addresses_table)]
-        return d
-        
     # construct a Query object which expects the "addresses" results 
-    query = session.query(User).options(contains_eager('addresses', decorator=adtranslator))
+    query = session.query(User).options(contains_eager('addresses', alias=adalias))
 
     # get results normally
     {sql}r = query.instances(statement.execute())
