@@ -33,6 +33,9 @@
   - improved support for complex queries embedded into "where" criterion
   for query.select() [ticket:449]
   - contains_eager('foo') automatically implies eagerload('foo')
+  - added "alias" argument to contains_eager().  use it to specify the string name
+    or Alias instance of an alias used in the query for the eagerly loaded child items.
+    easier to use than "decorator"
   - mapper options like eagerload(), lazyload(), deferred(), will work for "synonym()"
   relationships [ticket:485]
   - fixed bug where cascade operations incorrectly included deleted collection
